tests/NormalTests/paczka1/small_fuzzy/83227615.err
Error in line 10: Nzir A423 68,9
Error in line 15: cMXaiJJMgk S601 47,6
